<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/colorPrimary">

    <com.hope.commonsense.Views.TextViewWithFont
        android:id="@+id/toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:text="@string/profile"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="15dp"
        android:layout_centerVertical="true"/>

    <LinearLayout
        android:id="@+id/back_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="@dimen/activity_main_navigation_icon_size"
            android:layout_height="@dimen/activity_main_navigation_icon_size"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:background="@drawable/btn_back"/>

        <com.hope.commonsense.Views.TextViewWithFont
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:textColor="@color/white"
            android:text="@string/back"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="horizontal"
        android:layout_alignParentRight="true">

        <com.hope.commonsense.Views.TextViewWithFont
            android:id="@+id/edit_layout_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:textColor="@color/white"
            android:text="@string/edit"/>
        <Button
            android:id="@+id/btn_save"
            android:layout_width="@dimen/activity_main_navigation_icon_size"
            android:layout_height="@dimen/activity_main_navigation_icon_size"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/btn_edit"
            android:clickable="false"
            android:focusable="false"/>

    </LinearLayout>

</RelativeLayout>