<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/parent_layout">

    <include layout="@layout/app_bar_profile"/>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/profile_image_layout"
                android:layout_width="@dimen/activity_profile_image_size"
                android:layout_height="@dimen/activity_profile_image_size"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="40dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profileImage"
                    android:layout_width="@dimen/activity_profile_image_size"
                    android:layout_height="@dimen/activity_profile_image_size"
                    android:src="@drawable/noprofile"
                    app:border_width="0dp"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/add_new_image"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/btn_changephoto"
                    app:border_width="0dp"
                    android:layout_marginBottom="8dp"
                    android:visibility="gone"/>
            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nickname_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:theme="@style/TextInputLayout">

                <EditText
                    android:id="@+id/nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nickname"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/dark_gray2"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/status_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:theme="@style/TextInputLayout">

                <EditText
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_status"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/dark_gray2"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/phone_number_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:theme="@style/TextInputLayout">

                <EditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone_number"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/dark_gray2"
                    android:clickable="false"
                    android:focusable="false"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:theme="@style/TextInputLayout">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/dark_gray2"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:theme="@style/TextInputLayout">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/dark_gray2"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!._-@#$%^"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <io.github.yuweiguocn.lib.squareloading.SquareLoading
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        app:squareColor="@color/colorPrimary"
        app:squareSize="10dp"
        app:squareCorner="2dp"
        app:dividerSize="2dp"
        app:xCount="3"
        app:yCount="3"
        android:visibility="gone"/>


</LinearLayout>

